@@ -480,6 +480,7 @@ Version 2.8      2014-xx-xx
 ---------------------------
 - [FTR pyserial:37] Support fileno() function in the socket protocol
 - Posix: [Patch pyserial:31] Mark/space parity on Linux
+- Linux: [Patch pyserial:32] Module list_ports for linux should include the product information as description.
 
 Bugfixes:
 
